# war-village-game-engine

./: .gitignore  Cargo.toml  war-village-deploy-update
crates/wv-cli/: Cargo.toml
crates/wv-cli/src/: main.rs
crates/wv-core/: Cargo.toml
crates/wv-core/src/: combat.rs  fighter.rs  game.rs  input.rs  lib.rs  physics.rs  state_machine.rs  types.rs  weapon.rs
crates/wv-wasm/: Cargo.toml
crates/wv-wasm/src/: lib.rs  snapshot.rs
crates/wv-wasm/www/: index.html  main.js
